--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,9 @@
 		"svelte": "^5.0.0",
 		"tailwindcss": "^4.0.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"@simonwep/pickr": "^1.9.1",
+		"vanilla-colorful": "^0.7.2"
 	}
 }
